<resources>
    <string name="app_name">Pratical4.2 Homework</string>
    <string name="chocolate_syrup">Chocolate Syrup</string>
    <string name="Sprinkles">Sprinkles</string>
    <string name="crushed_nuts">Crushed Nuts</string>
    <string name="cherries">Cherries</string>
    <string name="orio_cookie_crumbles">Orio Cookie Crumbles</string>
    <string name="show_toast">Show Toast</string>
</resources>