<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="193dp"
        android:layout_height="187dp"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/chocolate_syrup"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:buttonTint="#E91E63"
            android:text="@string/chocolate_syrup"
            android:textColorLink="#E91E63"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="409dp" />

        <CheckBox
            android:id="@+id/Sprinkles"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:text="@string/Sprinkles"
            android:buttonTint="#E91E63"
            android:textColorLink="#FFFFFF"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="441dp" />

        <CheckBox
            android:id="@+id/crushed_nuts"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:text="@string/crushed_nuts"
            android:buttonTint="#E91E63"
            android:textColorLink="#00BCD4"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="473dp" />

        <CheckBox
            android:id="@+id/cherries"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/cherries"
            android:buttonTint="#E91E63"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crushed_nuts" />

        <CheckBox
            android:id="@+id/orio_cookie_crumbles"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:text="@string/orio_cookie_crumbles"
            android:buttonTint="#E91E63"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cherries" />
    </LinearLayout>

    <Button
        android:id="@+id/show_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="200dp"
        android:text="@string/show_toast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>